add list category

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@
 .Box:hover {
   color: black;
 }
+
+.list-category{
+  border: 1px solid rgb(18, 35, 68);
+  border-top: none;
+  border-bottom: none;
+}
