--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #EFEFEF;
+}
 .category-container {
   max-width: 1440px;
   margin: 1rem auto 2.7rem;
@@ -14,4 +17,22 @@
 
 .Box:hover {
   color: black;
+}
+
+.list-category{
+  border: 1px solid rgb(18, 35, 68);
+  border-top: none;
+  border-bottom: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.Button :hover{
+  background-color: rgb(62, 62, 62)!important;
+  color: white;
+}
+body{
+  background-color: #efefef;
 }
