--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ body{
   color: black;
 }
 
+.Button:hover {
+  color: black;
+  background-color: rgb(187, 255, 232)!important;
+}
+
 .list-category{
   border: 1px solid rgb(18, 35, 68);
   border-top: none;
