--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-body{
+body {
   background-color: #EFEFEF;
 }
+
 .category-container {
   max-width: 1440px;
   margin: 1rem auto 2.7rem;
   cursor: pointer;
 }
+
 .Card {
   border-radius: 0px !important;
   box-shadow: none !important;
 }
 
 .Card:hover {
-  filter: brightness(108%)!important;
+  filter: brightness(108%) !important;
 }
 
 .Box:hover {
@@ -21,10 +23,10 @@ body{
 
 .Button:hover {
   color: black;
-  background-color: rgb(187, 255, 232)!important;
+  background-color: rgb(187, 255, 232) !important;
 }
 
-.list-category{
+.list-category {
   border: 1px solid rgb(18, 35, 68);
   border-top: none;
   border-bottom: none;
@@ -34,10 +36,28 @@ a {
   text-decoration: none;
 }
 
-.Button :hover{
-  background-color: rgb(62, 62, 62)!important;
+.Button :hover {
+  background-color: rgb(62, 62, 62) !important;
   color: white;
 }
-body{
+
+body {
   background-color: #efefef;
+}
+
+.Link {
+  color: white;
+  margin-top: 10px;
+}
+
+.FooterItem {
+  margin-top: 15px;
+}
+
+.product-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
